# mcp_kipris

./: .cursorrules  .env.example  .gitignore  CLAUDE.md  DEVELOPMENT.md  Dockerfile.sse  Dockerfile.stdio  LICENSE  README.ko.md  README.md  debug_columns.py  debug_trademark.py  mcp_run.sh  pyproject.toml  requirements.txt  smithery.yaml  sse_server_build.sh  test_additional.py  test_qa.py
.bkit/state/: pdca-status.json
.claude/: settings.json
.github/workflows/: publish.yml  test.yml
16/dd6dd2ce89/: metadata.json
16/dd6dd2ce89/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
16/dd6dd2ce89/1/: content_hash.txt  full.jsonl  metadata.json
16/dd6dd2ce89/2/: full.jsonl  metadata.json  prompt.txt
16/dd6dd2ce89/3/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
59/1f58e3eee0/: metadata.json
59/1f58e3eee0/0/: content_hash.txt  full.jsonl  metadata.json
67/13b7ce98de/: metadata.json
67/13b7ce98de/0/: content_hash.txt  metadata.json
67/13b7ce98de/1/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
docs/: claude-skill-setup.md  code-review.md  qa-report.md
docs/archive/2026-03/: _INDEX.md
docs/archive/2026-03/foreign/: foreign.report.md
docs/archive/2026-03/kipris-claude-skill/: kipris-claude-skill.report.md
src/mcp_kipris/: __init__.py  _version.py  server.py  sse_server.py
src/mcp_kipris/kipris/: abc.py  api_client_factory.py  errors.py  logging_utils.py  rate_limiter.py
src/mcp_kipris/kipris/api/: abs_class.py  utils.py
src/mcp_kipris/kipris/api/foreign/: __init__.py  applicant_search.py  application_number_search.py  code.py  free_search_api.py  international_application_number_search.py  international_open_number_search.py  international_open_number_search_api.py
src/mcp_kipris/kipris/api/korean/: __init__.py  abstract_search_api.py  agent_search_api.py  applicant_search_api.py  application_number_search_api.py  free_search_api.py  ipc_search_api.py  patent_detail_search_api.py  patent_search_api.py  patent_summary_search_api.py  righter_search_api.py  trademark_search_api.py
src/mcp_kipris/kipris/tools/: __init__.py  abc.py  code.py
src/mcp_kipris/kipris/tools/foreign/: __init__.py  applicant_search_tool.py  application_number_search_tool.py  free_search_tool.py  international_application_number_search_tool.py  international_open_number_search_tool.py
src/mcp_kipris/kipris/tools/korean/: __init__.py  abstract_search_tool.py  agent_search_tool.py  applicant_search_tool.py  application_number_search_tool.py  ipc_search_tool.py  open_number_search_tool.py  patent_detail_search_tool.py  patent_free_search_tool.py  patent_keyword_search_tool.py  patent_search_tool.py  patent_summary_search_tool.py  publication_number_search_tool.py  registration_number_search_tool.py  righter_search_tool.py  trademark_search_tool.py
src/mcp_kipris/utils/: patent_sim.py
test/: README.md  debug_righter_search.py  test_application_number_search.py  test_ecopro_patents.py  test_ecopro_simple.py  test_korean_applicant_search.py  test_patent_detail.py  test_patent_detail_search.py  test_patent_keyword_search.py  test_patent_search.py  test_patent_summary_search.py  test_righter_search.py  test_samsung_patents.py
