[build-system]
requires = ["setuptools>=65.5.1", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-kipris"
dynamic = ["version"]
description = "MCP server for KIPRIS — Korean Intellectual Property Rights Information Service (patent & trademark search)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "강재호", email = "greennuri@gmail.com" },
]
keywords = [
    "mcp",
    "kipris",
    "patent",
    "trademark",
    "korean-patent",
    "intellectual-property",
    "kipo",
    "model-context-protocol",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "fastapi>=0.115.14",
    "icecream>=2.1.4",
    "langchain-community>=0.3.21",
    "langchain-core>=0.3.51",
    "mcp[cli]>=1.6.0",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "stringcase>=1.2.0",
    "tabulate>=0.9.0",
    "xmltodict>=0.14.2",
]

[project.scripts]
mcp-kipris = "mcp_kipris:main"

[project.urls]
Homepage = "https://github.com/nuri428/mcp_kipris"
Repository = "https://github.com/nuri428/mcp_kipris"
"Bug Tracker" = "https://github.com/nuri428/mcp_kipris/issues"
Changelog = "https://github.com/nuri428/mcp_kipris/releases"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pyright>=1.1.398",
    "ruff>=0.3.0",
    "build>=1.0.0",
]

[tool.ruff]
line-length = 120
indent-width = 4
extend-select = ["W291"]
ignore = ["F401", "E", "F"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 120

[tool.setuptools_scm]
write_to = "src/mcp_kipris/_version.py"
